interface-ize the repo scanner